[package]
name = "weather_tracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
firestore = "0.37.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
futures = "0.3"